--- a/Semi_project_01/WebContent/css/wManage2.css
+++ b/Semi_project_01/WebContent/css/wManage2.css
@@ -1,89 +1,170 @@
 @charset "UTF-8";
-/* 탈퇴요청 상세정보 */
-        .wManage {
-            position: relative;
-            width: 1080px;
-            height: 500px;
-            margin: 0 auto;
-            padding-top: 60px;
-        }
-        /* 탈퇴요청 상세정보 aside*/
-        .wManage_aside{   
-            position: absolute;
-            width: 200px;
-            height: auto;
-            float: left;
-            margin-right: 60px;
-        }
-        #wManage_asidetlt{
-            padding-bottom: 20px;
-            font-size: 30px;
-        }   
-         /* reset 안먹어서 임의로 적음 */
-        .wManage_asidenav ul{
-        	padding : 0;
-        }
-        .wManage_asidenav ul li {
-            height: 50px;
-            padding-left: 20px;
-            border: solid 1px;
-            box-sizing: border-box;
-            /* reset 안먹어서 임의로 적음 */
-            list-style : none;
-        }
-        .wManage_asidenav ul li a {
-            line-height: 50px;
-        }
 
-        /* 탈퇴요청 상세정보 content*/
-        .wManage_cont {
-            position: absolute;
-            left: 260px;
-            width: 820px;
-        }
-        /* 탈퇴요청 상세정보 content title*/
-        #wManage_cont_title {
-            width: 100%;
-            font-size: 24px;
-            padding-bottom: 20px;
-        }
-        /* 탈퇴요청 상세정보 content board */
-        .wManage_cont_board{
-            width: 100%;
-            height: 400px;
-            background-color: white;
-            border: solid 1px;
-            box-sizing: border-box;    
-        }
-        .wreq_info{
-            padding-top: 35px;
-        }
-        .wreq_info table{
-            width: 720px;
-            height: 330px;
-            margin: 0 auto;
-            background-color: white;
-            font-size: 12px;
-            
-        }
-        .wreq_info th {
-            font-weight: bold;
-            height: 40px;
-            line-height: 40px;
-            text-align: center;
-            border: solid 1px;
-            background-color: rgb(233, 233, 233);
-        }
-        .wreq_info td{
-            padding-left: 10px;
-            border: solid 1px;
-        }
-        #wreq_rdesc{
-            height: 190px;
-        }
-        .wreq_info tr:last-child td{
-            text-align: center;
-            height: 40px;
-            line-height: 40px;
-            border: none;
-        }
+table, td {
+	border-collapse: collapse;
+}
+
+a {
+	text-decoration: none;
+}
+/* 회원관리 */
+.wManage {
+	position: relative;
+	width: 1080px;
+	height: 500px;
+	margin: 0 auto;
+	padding-top: 60px;
+}
+/* 회원관리 aside*/
+.wManage_aside {
+	position: absolute;
+	width: 200px;
+	height: auto;
+	float: left;
+	margin-right: 60px;
+}
+
+.wManage_asidetlt {
+	font-size: 30px;
+	padding-bottom: 20px;
+}
+
+.wManage_asidenav {
+	border: 1px solid #f2f2f2;
+	border-bottom: 0;
+}
+
+.wManage_asidenav ul li {
+	height: 50px;
+	padding: 15px 0 15px 20px;
+	border-bottom: 1px solid #f2f2f2;
+	box-sizing: border-box;
+}
+
+.wManage_asidenav ul li a {
+	line-height: 20px;
+	font-size: 14px;
+	color: #666;
+}
+
+.wManage_asidenav ul li:hover, .wManage_asidenav ul li:hover a {
+	color: #425c5a;
+	font-weight: 700;
+	background-size: 20px px;
+	background-color: #fafafa;
+}
+
+.aside_arrow {
+	position: absolute;
+	right: 0;
+	padding-right: 20px;
+	line-height: 20px;
+	font-size: 14px;
+}
+
+/* 탈퇴요청 상세정보 content*/
+.wManage_cont {
+	position: absolute;
+	left: 260px;
+	width: 820px;
+}
+/* 탈퇴요청 상세정보 content title*/
+#wManage_cont_title {
+	width: 100%;
+	font-size: 24px;
+	padding-bottom: 20px;
+}
+/* 탈퇴요청 상세정보 content board */
+.wManage_cont_board {
+	width: 100%;
+	border-top: 2px solid #425c5a;
+}
+
+.wreq_info {
+	padding-top: 50px;
+}
+
+.wreq_info table {
+	width: 720px;
+	margin: 0 auto;
+	font-size: 12px;
+}
+
+.txt_title {
+	padding: 20px 0;
+	color: #666;
+	text-align: center;
+	background-color: #f2f2f2;
+	border-bottom: 1px solid white;
+}
+
+.txt_cont {
+	padding: 20px 0 20px 20px;
+	border: 1px solid #f2f2f2;
+	border-bottom: 1px solid #f2f2f2;
+	color: #666;
+	box-sizing: border-box;
+}
+
+.wreq_info tr:last-child td {
+	text-align: center;
+	padding-top: 40px;
+}
+
+.member_info {
+	font-size: 18px;
+	text-align: left;
+	padding-left: 10px;
+	padding-bottom: 20px;
+}
+
+#edit {
+	width: 150px;
+	height: 50px;
+	background-color: #425c5a;
+	border: 1px solid #425c5a;
+	border-radius: 3px;
+	color: #f2f2f2;
+	font-size: 14px;
+}
+
+#reset {
+	margin-left: 30px;
+	width: 150px;
+	height: 45px;
+	background-color: white;
+	border-radius: 3px;
+	border: 2px solid #425c5a;
+	color: #425c5a;
+	font-size: 14px;
+}
+
+/* aside 아래 */
+.CS_info {
+	margin-top: 20px;
+	height: 60px;
+	box-sizing: border-box;
+	background-color: #fafafa;
+	border-radius: 0 100px 100px 0;
+	padding : 18px 0 0 21px;
+}
+
+.CS_info a {
+	line-height: 22px;
+	color: #333;
+}
+
+#one {
+	font-size: 14px;
+	font-weight: bold;
+	color: #333;
+}
+
+#two {
+	position: absolute;
+	right: 0;
+	color: #425c5a;
+	font-size: 14px;
+	font-weight: bold;
+	margin-right: 20px;
+}
