주문번호 수정

--- a/Semi_project_01/WebContent/css/cart.css
+++ b/Semi_project_01/WebContent/css/cart.css
@@ -245,7 +245,7 @@ display:none;
         .btn_delete_a{
         	border:0px;
         	background-color:white;
+        	font-size:15px;
+        	color:gray;
         }
-        .far{
-        color:#dcdcdc;
-        }
+        
