관리자페이지 footer 관련 css 추가

--- a/Semi_project_01/WebContent/css/mManage1.css
+++ b/Semi_project_01/WebContent/css/mManage1.css
@@ -14,7 +14,9 @@
             height: 500px;
             margin: 0 auto;
             padding-top: 60px;
+            min-height: 120%;
         }
+
         /* 회원관리 aside*/
         .mManage_aside{   
             position: absolute;
